Fixed alignment for homepage buttons

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -28,10 +28,7 @@ body {
 	margin-bottom: 20px;
 }
 
-.showCommentsBtn {
-	-webkit-transform: rotate(90deg); 
-     -moz-transform: rotate(90deg); 
-      -ms-transform: rotate(90deg); 
-       -o-transform: rotate(90deg); 
-          transform: rotate(90deg);
+.homeAppButtons {
+	margin-left: auto;
+	margin-right: auto;
 }
